--- a/index.html
+++ b/index.html
@@ -12,17 +12,28 @@
     </head>
     <body class="bg-primary">
         <div class="container-fluid text-center">
-            <div class="row justify-content-md-center align-items-center ">
+            <div class="row justify-content-sm-center align-items-center ">
                 <div class="col m-5" >
-                    <img src="img/port.png" alt="Portafolio" class="animate__animated animate__bounceInLeft animate__slower">
+                    <img src="img/port.png" alt="Portafolio" class="img-fluid animate__animated animate__bounceInLeft animate__slower">
                 </div>
             </div>
-            <div class="row justify-content-center align-items-center">
-                <div class="col">
-                    <div></div>
+            <div class="row justify-content-sm-center mt-5">
+                <div class="col mt-5">
+                    <div>
+                        <img src="img/recurso-1.png" alt="Portafolio" class="img-fluid animate__animated animate__fadeInBottomLeft animate__slow">
+                    </div>
                 </div>
-                <div class="col">Column</div>
-                <div class="col">Column</div>
+                <div class="col mt-5">
+                    <div>
+                        <img src="img/recurso-2.png" alt="Quien soy?" class="img-fluid animate__animated animate__fadeInBottomRight animate__slower">
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-sm-center mt-5">
+                <div class="col  ">
+                    b5-col
+                </div>
+                
             </div>
         </div>
     </body>
