actualización nombres imagenes

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 <div class="col-6 mt-5 pe-5">
                     <div class="blue-box w-75 float-end me-5" 
                         data-aos="zoom-in" data-aos-duration="1500">
-                        <img src="img/recurso-3.png" alt="HuronSama" class="img-fluid ps-4" 
+                        <img src="img/recurso-26.png" alt="HuronSama" class="img-fluid ps-4" 
                             data-aos="zoom-in" data-aos-duration="1300" data-aos-delay="700">
                     </div>
                 </div>
                 <div class="col-6 mt-5">
                     <div class="green-box w-75 pt-4"
                         data-aos="zoom-in" data-aos-duration="1500">
-                        <img src="img/nath-Recurso-11.png" alt="Quien soy?" class="img-fluid w-75" 
+                        <img src="img/Recurso-29.png" alt="Quien soy?" class="img-fluid w-75" 
                             data-aos="fade-up-left" data-aos-duration="1500">
-                        <img src="img/recurso-4.png" alt="cafe"class="img-fluid w-50 float-end position-relative" 
+                        <img src="img/recurso-27.png" alt="cafe"class="img-fluid w-50 float-end position-relative" 
                         data-aos="fade-up-left" data-aos-duration="1500">
                     </div>
                 </div>
@@ -41,36 +41,49 @@
             <div class="row justify-content-sm-center mt-5 pt-5">
                 <div class="col mt-5">
                     <div>
-                        <img src="img/recurso-1.png" alt="Portafolio" class="img-fluid" 
+                        <img src="img/recurso-24.png" alt="Portafolio" class="img-fluid" 
                             data-aos="fade-up-right" data-aos-duration="1500">
                     </div>
                 </div>
                 <div class="col mt-5">
                     <div>
-                        <img src="img/recurso-2.png" alt="Quien soy?" class="img-fluid" 
+                        <img src="img/recurso-25.png" alt="Quien soy?" class="img-fluid" 
                             data-aos="fade-up-left" data-aos-duration="1500" data-aos-delay="500">
                     </div>
                 </div>
             </div>
             <div class="row justify-content-sm-center mt-5 mb-4 p-4">
                 <div class="col-4 mt-4 position-relative">
-                    <img src="img/Recurso 2.png" alt="Idiomas" 
+                    <img src="img/Recurso-2.png" alt="Idiomas" 
                         class="img-fluid position-absolute bottom-0 start-0" 
                         data-aos="fade-up-right" data-aos-duration="1500">
                 </div>
                 <div class="col-5 mt-4 position-relative">
-                    <img src="img/Recurso 5.png" alt="Habilidades" 
+                    <img src="img/Recurso-5.png" alt="Habilidades" 
                     class="img-fluid position-absolute bottom-0 start-0" 
                     data-aos="fade-up" data-aos-duration="1500">
                 </div>
                 <div class="col-3 mt-4">
-                    <img src="img/Recurso 6.png" alt="RRSS" class="img-fluid w-75" 
+                    <img src="img/Recurso-6.png" alt="RRSS" class="img-fluid w-75" 
                         data-aos="fade-down" data-aos-duration="1500">
                 </div>
                 
             </div>
             <div class="row justify-content-sm-center mt-5 mb-4 p-4">
-                
+                <div class="col-6">
+                    <div class="">
+                        <img src="img/" alt="">
+                        <img src="img/" alt="">
+                    </div>
+                    <div class="">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="">
+                        <img src="" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
