--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> 
         <link rel="stylesheet" href="css/index.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         
@@ -72,23 +72,46 @@
             <div class="row justify-content-sm-center mt-5 mb-4 p-4">
                 <div class="col-6">
                     <div class="">
-                        <img src="img/" alt="">
-                        <img src="img/" alt="">
+                        <img src="img/Recurso-32.png" alt="Diseño-editorial" class="img-fluid"
+                        data-aos="fade-in" data-aos-duration="1500">
                     </div>
-                    <div class="">
-                        <img src="" alt="">
+                    <div class="pt-5">
+                        <img src="img/Recurso-33.png" alt="Editorial-descripcion" 
+                            class="img-fluid red-card float-end"
+                            data-aos="slide-right" data-aos-duration="1500">
+                        <img src="img/Recurso-34.png" alt="Editorial-proyecto" 
+                            class="img-fluid red-card float-end"
+                            data-aos="fade-left" data-aos-duration="1700" data-aos-delay="1600">
+                        
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="">
-                        <img src="" alt="">
+                        <img src="img/Recurso-35.png" alt="Editorial-proyecto" 
+                            class="img-fluid w-50"
+                            data-aos="slide-up" data-aos-duration="1500" data-aos-delay="600">
+                        <img src="img/Recurso-36.png" alt="Editorial-descripcion" 
+                            class="img-fluid w-50 ps-5"
+                            data-aos="fade-up" data-aos-duration="1400" data-aos-offset="200" data-aos-delay="200">
                     </div>
+                </div>
+            </div>
+            <div class="row justify-content-sm-center mt-5 mb-4 p-4">
+                <div class="col">
+                    <img src="img/Recurso-10.png" alt="Editorial-proyecto" class="img-fluid h-50"
+                        data-aos="slide-right" data-aos-duration="1500">
+                </div>
+                <div class="col">
+                    <img src="img/Recurso-14.png" alt="Editorial-proyecto" class="img-fluid"
+                        data-aos="slide-left" data-aos-duration="1500">
                 </div>
             </div>
         </div>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
-            AOS.init();
+            AOS.init({
+                offset: 360
+            });
         </script>
     </body>
 </html>
