--- a/index.html
+++ b/index.html
@@ -96,14 +96,26 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-sm-center mt-5 mb-4 p-4">
-                <div class="col">
-                    <img src="img/Recurso-10.png" alt="Editorial-proyecto" class="img-fluid h-50"
+            <div class="row justify-content-sm-center mt-5 p-4">
+                <div class="col-6">
+                    <img src="img/Recurso-10.png" alt="Editorial-proyecto" class="img-fluid w-50"
                         data-aos="slide-right" data-aos-duration="1500">
                 </div>
-                <div class="col">
+                <div class="col-6">
                     <img src="img/Recurso-14.png" alt="Editorial-proyecto" class="img-fluid"
                         data-aos="slide-left" data-aos-duration="1500">
+                </div>
+            </div>
+            <div class="row justify-content-sm-center mt-5 mb-4 p-4">
+                <div class="col">
+                    <img src="img/Recurso-15.png" alt="Logos y Fotos" class="img-fluid"
+                    data-aos="fade-right" data-aos-duration="800">
+                    <img src="img/Recurso-16.png" alt="Fotos" class="img-fluid"
+                    data-aos="fade-in" data-aos-duration="2000">
+                </div>
+                <div class="col">
+                    <img src="img/Recurso-17.png" alt="Logos" class="img-fluid"
+                    data-aos="fade-down" data-aos-duration="2000">
                 </div>
             </div>
         </div>
