--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@
                     data-aos="fade-down" data-aos-duration="2000">
                 </div>
             </div>
+            <div class="row justify-content-sm-center mt-5 mb-4 p-4">
+                <div class="position-relative">
+                    <img src="img/recurso-37.png" class="img-fluid" alt="HuronSama"
+                    data-aos="zoom-in" data-aos-duration="2000">
+                    <img src="img/Recurso-22.png" 
+                    class="img-fluid w-25 position-absolute bottom-0 end-0" alt="Fin del Espacio"
+                    data-aos="fade-left" data-aos-duration="2000" data-aos-offset="100">
+                </div>
+            </div>
+            <div class="row justify-content-sm-center mt-5 p-5">
+                <div>
+                    <img src="img/Recurso-23.png" alt="Natasha Figueroa"
+                    class="img-fluid">
+                </div>
+            </div>
         </div>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
